--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
 </head>
 <body>
-    <div class="hero">
+    <div class="background">
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
@@ -26,7 +26,7 @@
         <div class="content">
             <h4>Hello, My name is</h4>
             <h1>Stephan<span>Brookens</span></h1>
-            <h3>I am a Full-Stacks Engineer</h3>
+            <h3><span> I am a </span>Full-Stacks Engineer</h3>
             <div class="newsletter">
                 <form>
                     <input type="email" name="email" id="mail" placeholder="Enter Your Email">
