--- a/Index.html
+++ b/Index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
 </head>
 <body>
-    <div class="background">
+    <div class="background"> <!--Used my picture as a background-->
         <nav>
-            <h2 class="logo">Portfo<span>lio</span></h2>
+            <h2 class="logo">Portfo<span>lio</span></h2> <!--used span to give additional colors in the text-->
             <ul>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
-            <a href="#" class="btn">Subscribe</a>
+            <a href="#" class="btn">Subscribe</a> <!--Click to subscribe needs a link to the social media platform-->
         </nav>
-
+    <section>
         <div class="content">
             <h4>Hello, My name is</h4>
             <h1>Stephan<span>Brookens</span></h1>
@@ -32,9 +32,38 @@
                     <input type="email" name="email" id="mail" placeholder="Enter Your Email">
                     <input type="submit" name="submit" value="Let's Start">
                 </form>
+      </section>            
         </div>
-
     </div>
     
+
+
+    <div class="share">
+        <p>Let's Connect</p>
+
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
+
+
+    <section class="about">
+        <div class="main">
+            <img src="assets\images\selfie b and w.jpg" width="103%" height="103%">
+            <div class="about text">
+                <h2>About Me</h2>
+                <h5>Developer & Designer</h5>
+                <p>
+                    I am working towards becoming a Full-Stacks Engineerer. I will be able to provide a clean code along with a pixel masterpeice design. I will be able to make the website immersive and interactive with various web animations. I will also be able to ensure that the website is accessible to all users regardless of the device.
+                </p>
+                <button type="button">Let's Talk</button>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
