Converted links into the nav buttons for page navigation

--- a/Index.html
+++ b/Index.html
@@ -16,19 +16,19 @@
 
     <div class="intro">
         <a name="homesection"></a>
-        <p>homesection</p>
-        <p><a href="#aboutsection">goto aboutsection</a></p>
-        <p><a href="#projectssection">goto projectssection</a></p>
-        <p><a href="#contactsection">goto contactsection</a></p>
+        <p1>homesection</p1>
+        <p1><a href="#aboutsection">goto aboutsection</a></p1>
+        <p1><a href="#projectssection">goto projectssection</a></p1>
+        <p1><a href="#contactsection">goto contactsection</a></p1>
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul class="nav-links">
                 <!--Will convert the buttons to nav-links-->
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About Me">About Me</a></li>
-                <li><a href="#My Projects">My Projects</a></li>
+                <li><a href="#homesection">Home</a></li>
+                <li><a href="#aboutsection">About Me</a></li>
+                <li><a href="#projectssection">My Projects</a></li>
                 <li><a href="https://scratch.mit.edu/projects/562654046/">Play xD</a></li> <!--A lin to a created scratch game-->
-                <li><a href="#Contact Me">Contact Me</a></li>
+                <li><a href="#contactsection">Contact Me</a></li>
             </ul>
             <a href="#Subscribe" class="btn">Subscribe</a> <!--Will link to a YouTube channel soon-->
         </nav>
@@ -49,12 +49,12 @@
     </div>
 
     <!--About section start-->
-    <!--Will convert page navigation into the nav buttons-->
+    <!--Converted page navigation into the nav buttons-->
     <a name="aboutsection"></a>
-    <p>About Section</p>
-    <p><a href="#projectssection">goto projectssection</a></p>
-    <p><a href="#contactsection">goto contactsection</a></p>
-    <p><a href="#homesection">goto homeSection</a></p>    
+    <p1>About Section</p1>
+    <p1><a href="#projectssection">goto projectssection</a></p1>
+    <p1><a href="#contactsection">goto contactsection</a></p1>
+    <p1><a href="#homesection">goto homeSection</a></p1>    
     <section class="about">
         <div class="main">
             <img src="assets/images/selfie b and w reversed -.jpg">
@@ -71,10 +71,10 @@
 
     <!--Will convert page navigation into the nav buttons-->
     <a name="projectssection"></a>
-    <p>Projects Section</p>
-    <p><a href="#aboutsection">goto aboutsection</a></p>
-    <p><a href="#contactsection">goto contactsection</a></p>
-    <p><a href="#homesection">goto homeSection</a></p>
+    <p1>Projects Section</p1>
+    <p1><a href="#aboutsection">goto aboutsection</a></p1>
+    <p1><a href="#contactsection">goto contactsection</a></p1>
+    <p1><a href="#homesection">goto homeSection</a></p1>
     <div class="service">
         <div class="title">
             <h2>Top Projects</h2>
@@ -210,10 +210,10 @@
     <!--Contact section-->
     <!--Will convert page navigation into the nav buttons-->
     <a name="contactsection"></a>
-    <p>Contact Section</p>
-    <p><a href="#projectssection">goto projectssection</a></p>
-    <p><a href="#aboutsection">goto aboutsection</a></p>    
-    <p><a href="#homesection">goto homeSection</a></p>
+    <p1>Contact Section</p1>
+    <p1><a href="#projectssection">goto projectssection</a></p1>
+    <p1><a href="#aboutsection">goto aboutsection</a></p1>    
+    <p1><a href="#homesection">goto homeSection</a></p1>
     <div class="contact-me">
         <p>This porfolio is under construction.</p>
         <a class="button-two" href="#">Email Me</a>
