Added class for footer avatar. fixed about me header for mobile responsiveness

--- a/Index.html
+++ b/Index.html
@@ -75,7 +75,7 @@
                     JQuery
                     Node.JS
                 </p>
-                <button type="button">Let's Talk</button>
+                
             </div>
         </div>
     </section>
@@ -230,7 +230,10 @@
         <p>This porfolio is under construction.</p>
         <a class="button-two" href="#Contact">Email Me</a>
     </div>
+    <div id="footerpic">
 
+        <!--Insert Footer Avatar HERE-->
+    </div>
     <!--footer section-->
     <footer>
         <p>Stephan Brookens</p>
