working on appending images of projects

--- a/Index.html
+++ b/Index.html
@@ -94,8 +94,8 @@
             <div class="card">
                 <i class="fas fa-bars"></i>
                 <h5>Project 1</h5>
-                <div class="pins" id="project1">
-                    <div>
+                <div class="pins" id="cardOne">
+                    <div class="card1">
                         <!--Put Gif Here of Project 1 & a link-->
                         
 
