duplicated card1 to card2 in HTML & CSs

--- a/Index.html
+++ b/Index.html
@@ -101,25 +101,36 @@
         </div>
     </div>
 
-<!----------------------------CARD 1-------------------------------->    
-
-
-
-<!----------------------------CARD 2-------------------------------->        
-
-
-
+<!----------------------------CARD 1--------------------------------> 
 
 <!----------------------------CARD 2-------------------------------->
+    <div class="card2">
+    <div class="card__inner2">
+        <div class="card__face card__face--front2">
+            <h4>Super Eats Project</h4>
+        </div>            
+        <div class="card__face card__face--back2">
+            <div class="card__content2">
+                <div class="card__header2">
+                    <img src="assets/images/super eats.png" alt="Super Eats Project" class="avatar2" />
+                    
+                </div>
+                <div class="card__body2">
+                    <h5>Super Eats</h5>
+                    <p2>This service allowed the user to order food without having to input their location manually due to an API that requested permission to pinpoint their exact location.</p2>
 
+                </div>
 
+            </div>
+        </div>
+    </div>
+    </div>
+<!----------------------------CARD 2-------------------------------->
 
 <!----------------------------CARD 3-------------------------------->
 
 
 <!----------------------------CARD 3-------------------------------->
-
-
 
 <!----------------------------CARD 4-------------------------------->
 
