--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
         <div class="content">
             <h4><span>my name is</span></h4>
             <h1>Stephan <span>Brookens</span></h1>
-            <h3>I am a <span>Full-Stacks Engineer</span>.</h3>
+            <h3>I am a <span>Front-End Developer</span>.</h3>
             <div class="newslatter">
                 
                 <!--E-mail is functional-->
